<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application Name string -->
    <string name="app_name">IHA Help</string>

    <!-- These are strings for all Semester names (Front page) -->
    <string name="FirstSemester">1. Semester</string>
    <string name="SecondSemester">2. Semester</string>
    <string name="ThirdSemester">3. Semester</string>
    <string name="FourthSemester">4. Semester</string>
    <string name="FifthSemester">5. Semester</string>
    <string name="SixthSemester">6. Semester</string>
    <string name="SeventhSemester">7. Semester</string>

    <!-- These are strings for each Semester pages head lines -->
    <string name="title_activity_first_semester_pick_class">1. Semester - Pick a class</string>
    <string name="title_activity_second_semester_pick_class">2. Semester - Pick a class</string>
    <string name="title_activity_third_semester_pick_class">3. Semester - Pick a class</string>
    <string name="title_activity_fourth_semester_pick_line">4. Semester - Pick a line</string>
    <string name="title_activity_fifth_semester_internship">5. Semester - Internship</string>
    <string name="title_activity_sixth_semester_pick_line">6. Semester - Pick a line</string>
    <string name="title_activity_seventh_semester_pick_line">7. Semester - Pick a line</string>

    <!-- These are strings for 1st Semester class names -->
    <string name="IDE">IDE</string>
    <string name="IKLT">IKLT</string>
    <string name="MMLS">MMLS</string>
    <string name="PRJ1">PRJ1</string>
    <string name="VPR">VPR</string>
    <string name="MSYS">MSYS</string>
    <string name="OPRG">OPRG</string>

    <!-- These are strings for 1st Semester head lines -->
    <string name="title_activity_e1_ide">IDE</string>
    <string name="title_activity_e1_iklt">IKLT</string>
    <string name="title_activity_e1_mmls">MMLS</string>
    <string name="title_activity_e1_prj1">PRJ1</string>
    <string name="title_activity_e1_vpr1">VPR</string>
    <string name="title_activity_i1_msys">MSYS</string>
    <string name="title_activity_i1_oprg">OPRG</string>

    <!-- These are strings for 2nd Semester class names -->
    <string name="ASB">ASB</string>
    <string name="DSD">DSD</string>
    <string name="MSA">MSA</string>
    <string name="PRJ2">PRJ2</string>
    <string name="ISE">ISE</string>
    <string name="OOP">OOP</string>

    <!-- These are strings for 2nd Semester head lines -->
    <string name="title_activity_e2_asb">ASB</string>
    <string name="title_activity_e2_ms">MSA</string>
    <string name="title_activity_e2_dsd">DSD</string>
    <string name="title_activity_e2_prj2">PRJ2</string>
    <string name="title_activity_i2_ise">ISE</string>
    <string name="title_activity_i2_oop">OOP</string>

    <!-- These are strings for 3rd Semester class names -->
    <string name="DSB">DSB</string>
    <string name="MSE">MSE</string>
    <string name="PRJ3">PRJ3</string>
    <string name="GFV">GFV</string>
    <string name="ISU">ISU</string>
    <string name="MPS">MPS</string>

    <!-- These are strings for 3rd Semester head lines -->
    <string name="title_activity_e3_dsb">DSB</string>
    <string name="title_activity_e3_mse">MSE</string>
    <string name="title_activity_e3_prj3">PRJ3</string>
    <string name="title_activity_i3_gfv">GFV</string>
    <string name="title_activity_i3_isu">ISU</string>
    <string name="title_activity_i3_mps">MPS</string>

    <!-- These are strings for 4th Semester class names -->
    <!-- Fælles string navne -->
    <string name="PRJ4">PRJ4</string>
    <string name="IPR1">IPR1</string>
    <!-- IKT -->
    <string name="DAB">DAB</string>
    <string name="GUI">GUI</string>
    <string name="IKN">IKN</string>
    <string name="SWD">SWD</string>
    <string name="SWT">SWT</string>
    <!-- Starkstrom (EP) -->
    <string name="EEV">EEV</string>
    <string name="IOA">IOA</string>
    <!-- Elektro (E) -->
    <string name="ASD">ASD</string>
    <string name="DSA">DSA</string>
    <string name="EFYS">EFYS</string>
    <string name="IRT">IRT</string>

    <!-- These are strings for 4th Semester head lines -->
    <!-- IKT -->
    <string name="title_activity_fourth_semester_ikt">4. Semester - IKT</string>
    <string name="title_activity_i4_dab">DAB</string>
    <string name="title_activity_i4_gui">GUI</string>
    <string name="title_activity_i4_ikn">IKN</string>
    <string name="title_activity_i4_swd">SWD</string>
    <string name="title_activity_i4_swt">SWT</string>
    <!-- Starkstrom (EP) -->
    <string name="title_activity_fourth_semester_starkstrom">4. Semester - Stærkstrøm</string>
    <string name="title_activity_ep4_eev">EEV</string>
    <string name="title_activity_ep4_io">IOA</string>
    <!-- Elektro (E) -->
    <string name="title_activity_fourth_semester_elektro">4. Semester - Elektro</string>
    <string name="title_activity_e4_asd">ASD</string>
    <string name="title_activity_e4_ds">DSA</string>
    <string name="title_activity_e4_efys">EFYS</string>
    <string name="title_activity_e4_irt">IRT</string>

    <!-- These are strings for 5th Semester -->
    <string name="Praktik1">You are at an internship this semester.</string>
    <string name="Praktik2">There are no classes and therefore no notes.</string>

    <!-- These are strings for 6th Semester class names -->


    <!-- These are strings for 6th Semester head lines -->


    <!-- These are strings for 7th Semester class names -->


    <!-- These are strings for 7th Semester head lines -->


    <!-- Detailed class names -->
    <string name="E1IDE">Indledende digital elektronik</string>
    <string name="E1IKLT">Indledende kredsløbsteknik</string>
    <string name="E1MMLS">Matematisk Modellering af Lineære Systemer</string>
    <string name="E1PRJ1">Semester Projekt 1</string>
    <string name="E1VPR1">Værkstedspraktik</string>
    <string name="I1MSYS">Microcontroller systemer</string>
    <string name="I1OPRG">Objektbaseret programmering</string>
    <string name="E2ASB">Analog Signalbehandling</string>
    <string name="E2DSD">Digitalt Systemdesign</string>
    <string name="E2MSA">Matematisk System Analyse</string>
    <string name="E2PRJ2">Semester Projekt 2</string>
    <string name="I2ISE">Indledende System Engineering</string>
    <string name="I2OOP">Object orienteret programmering</string>
    <string name="E3DSB">Digital Signalbehandling</string>
    <string name="E3MSE">Mixed-signal elektronik</string>
    <string name="E3PRJ3">Semester Projekt 3</string>
    <string name="I3GFV">Grænseflader til den fysiske verden</string>
    <string name="I3ISU">Indlejret software udvikling</string>
    <string name="I3MPS">Microprocessor systemer</string>
    <string name="E4ASD">Analog System Design</string>
    <string name="E4DSA">Introduktion til Digital Signalanalyse</string>
    <string name="E4EFYS">Elektrofysik</string>
    <string name="E4IPR1">Praktikforberedelse</string>
    <string name="E4IRT">Introduktion til reguleringsteknik</string>
    <string name="E4PRJ4">Semester Projekt 4</string>
    <string name="EP4EEV">Energi og effekt i vekselsstrømsystemer</string>
    <string name="EP4IOA">Instrumentering og Automatisering</string>
    <string name="EP4IPR">Praktikforberedelse</string>
    <string name="EP4PRJ">Semester Projekt 4</string>
    <string name="I4DAB">Databaser</string>
    <string name="I4GUI">GUI programmering</string>
    <string name="I4IKN">Introduktion til kommunikationsnetværk</string>
    <string name="I4IPR1">Praktikforberedelse</string>
    <string name="I4PRJ4">Semester Projekt 4</string>
    <string name="I4SWD">Software design</string>
    <string name="I4SWT">Software test</string>
    <string name="E5IPR1">Ingeniørpraktik</string>
    <string name="EP5IPR">Ingeniørpraktik</string>
    <string name="I5IPR1">Ingeniørpraktik</string>

    <!-- These are strings for line names -->
    <string name="IKT">IKT</string>
    <string name="Starkstrom">Stærkstrøm</string>
    <string name="Elektro">Elektro</string>

    <!-- These are color codes, usable throughout the entire app -->
    <color name="Blue">#38C0F4</color>
    <color name="Green">#36c809</color>
    <color name="Red">#e50000</color>
    <color name="White">#FFFFFF</color>

    <!-- Extra -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_email">Email me</string>
    <string name="NYI">This page is NYI - Not Yet Implemented.</string>
    <string name="hello_world">Hello world!</string>

    <!-- New default ones (Hopefully there are none here) -->

</resources>