<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_tiles_background" >
    
	<com.moon.ihahelp.master_button
		android:id="@+id/Testy"
		android:text="@string/IDE"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/FirstSemester"
   		android:id="@+id/FirstSemester"
        android:textSize="25sp"
        android:textColor="@color/Blue"
        android:background="@android:color/transparent" />
    
	<include layout="@layout/button_divider" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/SecondSemester"
        android:id="@+id/SecondSemester"
        android:textSize="25sp"
        android:textColor="@color/Blue"
        android:background="@android:color/transparent" />

	<include layout="@layout/button_divider" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/ThirdSemester"
        android:id="@+id/ThirdSemester"
        android:textSize="25sp" 
        android:textColor="@color/Blue"
		android:background="@android:color/transparent" />

	<include layout="@layout/button_divider" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/FourthSemester"   
        android:id="@+id/FourthSemester"     
        android:textSize="25sp" 
        android:textColor="@color/Blue"
        android:background="@android:color/transparent" />
    
	<include layout="@layout/button_divider" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/FifthSemester"
        android:id="@+id/FifthSemester"         
        android:textSize="25sp"
        android:textColor="@color/Blue"
        android:background="@android:color/transparent" />
    
    <include layout="@layout/button_divider" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/SixthSemester"
        android:id="@+id/SixthSemester"      
        android:textSize="25sp"
        android:textColor="@color/Blue"
        android:background="@android:color/transparent" />
    
    <include layout="@layout/button_divider" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/SeventhSemester"
        android:id="@+id/SeventhSemester"
        android:textSize="25sp"
        android:textColor="@color/Blue"
        android:background="@android:color/transparent" />
    
</LinearLayout>