<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="IDEClick"
        android:text="@string/IDE"
        android:id="@+id/IDE"
        android:textSize="25sp" 
        android:textColor="@color/Blue"
        android:background="@android:color/transparent" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="IKLTClick"
        android:text="@string/IKLT"
        android:id="@+id/IKLT"
        android:textSize="25sp"
        android:textColor="@color/Blue"
        android:background="@android:color/transparent" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
		android:onClick="MMLSClick"
        android:text="@string/MMLS"
        android:id="@+id/MMLS"
        android:textSize="25sp" 
        android:textColor="@color/Blue"
		android:background="@android:color/transparent" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="PRJ1Click"
        android:text="@string/PRJ1" 
        android:id="@+id/PRJ1"       
        android:textSize="25sp" 
        android:textColor="@color/Blue"
        android:background="@android:color/transparent" />
    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="VPRClick"
        android:text="@string/VPR"   
        android:id="@+id/VPR"      
        android:textSize="25sp"
        android:textColor="@color/Blue"
        android:background="@android:color/transparent" />
    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="MSYSClick"
        android:text="@string/MSYS" 
        android:id="@+id/MSYS"     
        android:textSize="25sp"
        android:textColor="@color/Blue"
        android:background="@android:color/transparent" />
    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="OPRGClick"
        android:text="@string/OPRG"
        android:id="@+id/OPRG"
        android:textSize="25sp"
        android:textColor="@color/Blue"
        android:background="@android:color/transparent" />
    
</LinearLayout>