<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/black_tiles_background" >
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/ASB"
        android:id="@+id/E2ASB"
        android:textSize="25sp" 
        android:textColor="@color/Blue"
        android:background="@android:color/transparent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/MSA"
        android:id="@+id/E2MSA"
        android:textSize="25sp" 
        android:textColor="@color/Blue"
		android:background="@android:color/transparent" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/ISE" 
        android:id="@+id/I2ISE"        
        android:textSize="25sp"
        android:textColor="@color/Blue"
        android:background="@android:color/transparent" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/DSD"
        android:id="@+id/E2DSD"
        android:textSize="25sp"
        android:textColor="@color/Blue"
        android:background="@android:color/transparent" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/OOP" 
        android:id="@+id/I2OOP"     
        android:textSize="25sp"
        android:textColor="@color/Blue"
        android:background="@android:color/transparent" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/PRJ2" 
        android:id="@+id/E2PRJ2"       
        android:textSize="25sp" 
        android:textColor="@color/Blue"
        android:background="@android:color/transparent" />
    
</LinearLayout>